--- a/script.css
+++ b/script.css
@@ -28,7 +28,7 @@ body {
     top: 42vh;
     right: 50vw;
     transform: translate(50%, -50%);
-    font-size: 100px;
+    font-size: 7.4vw;
     font-family: sans-serif;
     font-weight: 700;
     letter-spacing: -9px;
@@ -59,7 +59,7 @@ body {
     content: '';
     display: inline-block;
     width: 5px;
-    height: 248px;
+    height: 18vw;
     background-color: rgb(189, 189, 189);
     transform-origin: left bottom;
     transform: translate(10px, 10px) rotate(0deg);
