--- a/script.css
+++ b/script.css
@@ -31,7 +31,7 @@ body {
     font-size: 7.4vw;
     font-family: sans-serif;
     font-weight: 700;
-    letter-spacing: -9px;
+    letter-spacing: -0.66vw;
 }
 
 .name span:first-child {
