--- a/script.css
+++ b/script.css
@@ -28,10 +28,10 @@ body {
     top: 42vh;
     right: 50vw;
     transform: translate(50%, -50%);
-    font-size: 7.4vw;
+    font-size: 7.4vmax;
     font-family: sans-serif;
     font-weight: 700;
-    letter-spacing: -0.66vw;
+    letter-spacing: -0.66vmax;
 }
 
 .name span:first-child {
@@ -59,7 +59,7 @@ body {
     content: '';
     display: inline-block;
     width: 5px;
-    height: 18vw;
+    height: 18vmax;
     background-color: rgb(189, 189, 189);
     transform-origin: left bottom;
     transform: translate(10px, 10px) rotate(0deg);
