--- a/script.css
+++ b/script.css
@@ -18,7 +18,6 @@ body {
     position: absolute;
     z-index: -1;
     animation: bc 4s 12.9s forwards;
-    border-radius: 0 8% 0 0;
 }
 
 .name {
@@ -102,11 +101,11 @@ span {
 
 @keyframes bc {
     0% {
-        transform: translate(0px, 0px);
+        transform: translateY(0px);
     }
 
     100% {
-        transform: translate(-100vw, 100vh);
+        transform: translateY(100vh);
 
     }
 }
